Fix layout issues

--- a/src/styles/layouts/base.scss
+++ b/src/styles/layouts/base.scss
@@ -48,7 +48,7 @@ a
 .item-content
 {
   @extend .f-light;
-  @extend .f-xs;
+  @extend .f-s;
   @extend .c-grey05;
 }
 
